--- a/app/views/layouts/shared/_classic_header.html.erb
+++ b/app/views/layouts/shared/_classic_header.html.erb
@@ -8,44 +8,13 @@
             <div class="topbar__item-text"><a class="topbar__link" href="blog-grid-right-sidebar.html">Blog</a></div>
             <div class="topbar__item-spring"></div>
             <div class="topbar__item-button">
-               <a href="compare.html" class="topbar__button"><span class="topbar__button-label">Compare:</span> <span class="topbar__button-title">5</span></a>
+               <% if current_user %>
+                  <a href="<%= destroy_user_session_path %>" data-method="delete" class="topbar__button"><span class="topbar__button-label">Sign Out</span></a>
+               <% else %>
+                  <a href="/users/sign_in"  class="topbar__button"><span class="topbar__button-label">Sign In</span></a>
+
+               <% end %>
             </div>
-            <div class="topbar__item-button topbar__menu">
-               <button class="topbar__button topbar__button--has-arrow topbar__menu-button" type="button">
-                  <span class="topbar__button-label">Currency:</span> <span class="topbar__button-title">USD</span>
-                  <span class="topbar__button-arrow">
-                     <svg width="7px" height="5px">
-                        <path
-                           d="M0.280,0.282 C0.645,-0.084 1.238,-0.077 1.596,0.297 L3.504,2.310 L5.413,0.297 C5.770,-0.077 6.363,-0.084 6.728,0.282 C7.080,0.634 7.088,1.203 6.746,1.565 L3.504,5.007 L0.262,1.565 C-0.080,1.203 -0.072,0.634 0.280,0.282 Z"
-                           />
-                     </svg>
-                  </span>
-               </button>
-               <div class="topbar__menu-body">
-                  <a class="topbar__menu-item" href="#">€ Euro</a>
-                  <a class="topbar__menu-item" href="#">£ Pound Sterling</a>
-                  <a class="topbar__menu-item" href="#">$ US Dollar</a>
-                  <a class="topbar__menu-item" href="#">₽ Russian Ruble</a>                                
-               </div>
-            </div>
-            <div class="topbar__menu">
-               <button class="topbar__button topbar__button--has-arrow topbar__menu-button" type="button">
-                  <span class="topbar__button-label">Language:</span> <span class="topbar__button-title">EN</span>
-                  <span class="topbar__button-arrow">
-                     <svg width="7px" height="5px">
-                        <path
-                           d="M0.280,0.282 C0.645,-0.084 1.238,-0.077 1.596,0.297 L3.504,2.310 L5.413,0.297 C5.770,-0.077 6.363,-0.084 6.728,0.282 C7.080,0.634 7.088,1.203 6.746,1.565 L3.504,5.007 L0.262,1.565 C-0.080,1.203 -0.072,0.634 0.280,0.282 Z"
-                           />
-                     </svg>
-                  </span>
-               </button>
-               <div class="topbar__menu-body">
-                  <a class="topbar__menu-item" href="#"><img src="images/languages/language-1.png" alt="English" /><span>English</span> </a>
-                  <a class="topbar__menu-item" href="#"><img src="images/languages/language-2.png" alt="French" /><span>French</span> </a>
-                  <a class="topbar__menu-item" href="#"><img src="images/languages/language-3.png" alt="German" /><span>German</span> </a>
-                  <a class="topbar__menu-item" href="#"><img src="images/languages/language-4.png" alt="Russian" /><span>Russian</span> </a>
-                  <a class="topbar__menu-item" href="#"><img src="images/languages/language-5.png" alt="Italian" /><span>Italian</span></a>
-               </div>
-            </div>
+            
          </div>
       </div>
