--- a/app/views/layouts/shared/_classic_header.html.erb
+++ b/app/views/layouts/shared/_classic_header.html.erb
@@ -7,14 +7,20 @@
             <div class="topbar__item-text"><a class="topbar__link" href="track-order.html">Track Order</a></div>
             <div class="topbar__item-text"><a class="topbar__link" href="blog-grid-right-sidebar.html">Blog</a></div>
             <div class="topbar__item-spring"></div>
+            <% if current_user %>
             <div class="topbar__item-button">
-               <% if current_user %>
                   <a href="<%= destroy_user_session_path %>" data-method="delete" class="topbar__button"><span class="topbar__button-label">Sign Out</span></a>
-               <% else %>
-                  <a href="/users/sign_in"  class="topbar__button"><span class="topbar__button-label">Sign In</span></a>
-
-               <% end %>
             </div>
+            <% else %>
+               <div class="topbar__item-button">
+                  <a href="/users/sign_in"  class="topbar__button"><span class="topbar__button-label">Sign In</span></a>
+               </div>
+               <div class="topbar__item-button">
+                  <a href="/users/sign_up"  class="topbar__button"><span class="topbar__button-label">Sign Up</span></a>
+
+               </div>
+               <% end %>
+           
             
          </div>
       </div>
