--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,39 @@
-<h2>Change your password</h2>
+<div class="site__body">
+<div class="block-space block-space--layout--after-header"></div>
+<div class="block">
+    <div class="container container--max--lg">
+        <div class="row">
+            <div class="col-md-6 mx-auto d-flex justify-content-center">
+                <div class="card flex-grow-1 mb-md-0 mr-0 mr-lg-3 ml-0 ml-lg-4">
+                    <div class="card-body card-body--padding--2">
+                        <h3 class="card-title">Forgot your password?</h3>
+                        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+                          <%= render "users/shared/error_messages", resource: resource %>
+                          <%= f.hidden_field :reset_password_token  %>
+                            <div class="form-group">
+                              <label for="signin-email">New password</label> 
+                              <% if @minimum_password_length %>
+                                <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+                              <% end %>
+                              <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
+                            </div>
+                            <div class="form-group">
+                              <label for="signin-email">Confirm new password</label> 
+                              <% if @minimum_password_length %>
+                                <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+                              <% end %>
+                              <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
+                            </div>
+                            <div class="form-group mb-0"><button type="submit" class="btn btn-primary mt-3">Change my password</button></div>
+                        <% end %>
+                        <br>
+                        <%= render "users/shared/links" %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="block-space block-space--layout--before-footer"></div>
+</div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
