--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,16 +1,26 @@
-<h2>Forgot your password?</h2>
-
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+<div class="site__body">
+<div class="block-space block-space--layout--after-header"></div>
+<div class="block">
+    <div class="container container--max--lg">
+        <div class="row">
+            <div class="col-md-6 mx-auto d-flex justify-content-center">
+                <div class="card flex-grow-1 mb-md-0 mr-0 mr-lg-3 ml-0 ml-lg-4">
+                    <div class="card-body card-body--padding--2">
+                        <h3 class="card-title">Forgot your password?</h3>
+                        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+                            <div class="form-group">
+                              <label for="signin-email">Email address</label> 
+                              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "customer@example.com" %>
+                            </div>
+                            <div class="form-group mb-0"><button type="submit" class="btn btn-primary mt-3">Send me reset password instructions</button></div>
+                        <% end %>
+                        <br>
+                        <%= render "users/shared/links" %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="block-space block-space--layout--before-footer"></div>
+</div>
