--- a/app/views/layouts/shared/_classic_header.html.erb
+++ b/app/views/layouts/shared/_classic_header.html.erb
@@ -1,7 +1,7 @@
  <div class="header__topbar-classic-bg"></div>
       <div class="header__topbar-classic">
          <div class="topbar topbar--classic">
-            <div class="topbar__item-text"><a class="topbar__link" href="about-us.html">About Us</a></div>
+            <div class="topbar__item-text"><a class="topbar__link" href="about-us">About Us</a></div>
             <div class="topbar__item-text"><a class="topbar__link" href="contact-us.html">Contacts</a></div>
             <div class="topbar__item-text"><a class="topbar__link" href="#">Store Location</a></div>
             <div class="topbar__item-text"><a class="topbar__link" href="track-order.html">Track Order</a></div>
