added user changes

--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -5,7 +5,7 @@
      <%= render "layouts/shared/classic_header" %> <!-- top header page-->
      <%= render "layouts/shared/nav_bar" %> <!-- Nav Bar page-->
       <div class="header__logo">
-         <a href="index.html" class="logo">
+         <a href="/" class="logo">
             <div class="logo__slogan">Auto parts for Cars, trucks and motorcycles</div>
             <div class="logo__image">
                <!-- logo -->
@@ -261,40 +261,45 @@
             </a>
             <div class="indicator__content">
                <div class="account-menu">
-                  <form class="account-menu__form">
-                     <div class="account-menu__form-title">Log In to Your Account</div>
-                     <div class="form-group">
-                        <label for="header-signin-email" class="sr-only">Email address</label> <input id="header-signin-email" type="email" class="form-control form-control-sm" placeholder="Email address" />
-                     </div>
-                     <div class="form-group">
-                        <label for="header-signin-password" class="sr-only">Password</label>
-                        <div class="account-menu__form-forgot">
-                           <input id="header-signin-password" type="password" class="form-control form-control-sm" placeholder="Password" /> <a href="#" class="account-menu__form-forgot-link">Forgot?</a>
+                  <% if !current_user %>
+                     <form class="new_user account-menu__form" id="new_user" action="/users/sign_in" accept-charset="UTF-8" method="post">
+                      <div class="account-menu__form-title">Log In to Your Account</div>
+                      <div class="form-group">
+                         <label for="header-signin-email" class="sr-only">Email address</label>
+                         <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
+                         <input id="header-signin-email user_email" name="user[email]" type="email" class="form-control form-control-sm" placeholder="Email address" />
+                      </div>
+                      <div class="form-group">
+                         <label for="header-signin-password" class="sr-only">Password</label>
+                         <div class="account-menu__form-forgot">
+                            <input id="header-signin-password user_password" type="password" class="form-control form-control-sm" name="user[password]" placeholder="Password" /> <a href="/users/password/new" class="account-menu__form-forgot-link">Forgot?</a>
+                         </div>
+                      </div>
+                      <div class="form-group account-menu__form-button"><button type="submit" class="btn btn-primary btn-sm">Login</button></div>
+                      <div class="account-menu__form-link"><a href="account-login.html">Create An Account</a></div>
+                     </form>
+                  <% else %>
+                     <div class="account-menu__divider"></div>
+                     <a href="#" class="account-menu__user">
+                        <div class="account-menu__user-avatar"><img src="images/avatars/avatar-4.jpg" alt="" /></div>
+                        <div class="account-menu__user-info">
+                           <div class="account-menu__user-name"><%= username(current_user) %></div>
+                           <div class="account-menu__user-email"><%= current_user.email %></div>
                         </div>
-                     </div>
-                     <div class="form-group account-menu__form-button"><button type="submit" class="btn btn-primary btn-sm">Login</button></div>
-                     <div class="account-menu__form-link"><a href="account-login.html">Create An Account</a></div>
-                  </form>
-                  <div class="account-menu__divider"></div>
-                  <a href="#" class="account-menu__user">
-                     <div class="account-menu__user-avatar"><img src="images/avatars/avatar-4.jpg" alt="" /></div>
-                     <div class="account-menu__user-info">
-                        <div class="account-menu__user-name">Ryan Ford</div>
-                        <div class="account-menu__user-email">auto-fix@example.com</div>
-                     </div>
-                  </a>
-                  <div class="account-menu__divider"></div>
-                  <ul class="account-menu__links">
-                     <li><a href="account-dashboard.html">Dashboard</a></li>
-                     <li><a href="account-dashboard.html">Garage</a></li>
-                     <li><a href="account-profile.html">Edit Profile</a></li>
-                     <li><a href="account-orders.html">Order History</a></li>
-                     <li><a href="account-addresses.html">Addresses</a></li>
-                  </ul>
-                  <div class="account-menu__divider"></div>
-                  <ul class="account-menu__links">
-                     <li><a href="account-login.html">Logout</a></li>
-                  </ul>
+                     </a>
+                     <div class="account-menu__divider"></div>
+                     <ul class="account-menu__links">
+                        <li><a href="/dashboard">Dashboard</a></li>
+                        <li><a href="account-dashboard.html">Garage</a></li>
+                        <li><a href="account-profile.html">Edit Profile</a></li>
+                        <li><a href="account-orders.html">Order History</a></li>
+                        <li><a href="account-addresses.html">Addresses</a></li>
+                     </ul>
+                     <div class="account-menu__divider"></div>
+                     <ul class="account-menu__links">
+                        <li><a href="account-login.html">Logout</a></li>
+                     </ul>
+                  <% end %>
                </div>
             </div>
          </div>
