--- a/app/views/layouts/shared/_classic_header.html.erb
+++ b/app/views/layouts/shared/_classic_header.html.erb
@@ -2,10 +2,10 @@
       <div class="header__topbar-classic">
          <div class="topbar topbar--classic">
             <div class="topbar__item-text"><a class="topbar__link" href="about-us">About Us</a></div>
-            <div class="topbar__item-text"><a class="topbar__link" href="contact-us.html">Contacts</a></div>
+            <div class="topbar__item-text"><a class="topbar__link" href="contact">Contacts</a></div>
             <div class="topbar__item-text"><a class="topbar__link" href="#">Store Location</a></div>
             <div class="topbar__item-text"><a class="topbar__link" href="track-order.html">Track Order</a></div>
-            <div class="topbar__item-text"><a class="topbar__link" href="blog-grid-right-sidebar.html">Blog</a></div>
+            <div class="topbar__item-text"><a class="topbar__link" href="blogs">Blog</a></div>
             <div class="topbar__item-spring"></div>
             <% if current_user %>
             <div class="topbar__item-button">
